--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "eslint src/**/*.ts{,x}"
+      "prettier --write"
     ]
   }
 }
