--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "npm run format", "npm run lint"
+      "npm run format",
+      "npm run lint"
     ]
   }
 }
