--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "npm run format",
-      "npm run lint"
+      "prettier --write"
     ]
   }
 }
