--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-  "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-    "npm run format",
-    "npm run lint"
-  ]
+  "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": ["prettier --write"]
 }
