--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,7 @@
 {
   "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-    "prettier --write src/**/*.ts{,x}"
+    "npm run format",
+    "npm run lint",
+    "git add"
   ]
 }
