--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "src/**/*{.js,.jsx,.ts,.tsx,.json,.css,.scss,.md}": [
+  "./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
     "npm run format",
     "npm run lint",
     "git add"
