--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,6 @@
 {
   "./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
     "npm run format",
-    "npm run lint",
-    "git add"
+    "npm run lint"
   ]
 }
