--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     }
   },
   "lint-staged": {
-    "./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "npm run format",
       "npm run lint"
     ]
