--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "eslint-import-resolver-typescript": "^2.7.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -27,7 +28,10 @@
     "sass": "^1.51.0",
     "typescript": "^4.6.4"
   },
+  "homepage": "https://Nick2603.github.io/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
